samples/_failures_safe/1761343339_3900dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ccf18f70.c: In function ‘main’:
./samples/SAFE/__tmp_ccf18f70.c:164:17: error: expected ‘;’ at end of input
  164 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_ccf18f70.c:164:9: error: expected declaration or statement at end of input
  164 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_ccf18f70.c:164:9: error: expected declaration or statement at end of input
